# quickslides

./: README.md  mdslides.py  pyproject.toml
.github/workflows/: python-publish.yml  test-and-lint.yml
mdslides/: __init__.py  cli.py  converter.py
quickslides/: converter.py
tests/: __init__.py  test_converter.py
