[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdslides"
version = "0.1.0"
description = "Convert Markdown to Typst slides"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "click",
    "rich",
]

[project.scripts]
mdslides = "mdslides.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "N", "PL", "RUF", "ANN", "W"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["mdslides"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.4",
]
