[project]
name = "mdslides-typst"
description = "Convert Markdown to PDF slides using Typst and typslides"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = ["click", "rich"]

[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "versioningit"

# Change import package name to mdslides instead of mdslides-typst
[tool.hatch.build.targets.wheel]
packages = ["mdslides"]

[tool.hatch.build.targets.wheel.force-include]
"typslides" = "typslides"

[project.scripts]
mdslides = "mdslides.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "N", "PL", "RUF", "ANN", "W"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["mdslides"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[dependency-groups]
dev = ["pytest>=8.3.5", "ruff>=0.11.4"]
